--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
-name = "kdb-rs"
+name = "kdb_rs"
 version = "0.1.0"
 authors = ["Krishna <krshnravipati@gmail.com>"]
 edition = "2018"
+
+[lib]
+doctest=false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
